// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to CSS and JavaScript should return a map of files 1`] = `
Object {
  "Button.elo.css": "._43fvyx {
  background-color: red;
  color: rgba(250,250,250,0.35);
  font-size: 15px;
  line-height: 5.2px;
  border-width: multiply(borderWidth,2)
}

._43fvyx__Type-Primary {
  color: red
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameWithVariants } from '@elodin/runtime'

const variants = {\\"Type\\":[\\"Primary\\",\\"Secondary\\"]}

export function Button(props) {
  return {
    _className: getClassNameWithVariants('_43fvyx', props, variants),
    
  }
}",
  "Label.elo.css": "._1lfo85i {
  line-height: lineHeight;
  font-size: 20px
}

._1lfo85i:hover {
  color: red;
  background-color: bgColor
}",
  "Label.elo.js": "import './Label.elo.css'
import { getClassNameWithVariants } from '@elodin/runtime'

const variants = {\\"Type\\":[\\"Primary\\",\\"Secondary\\"]}

export function Label(props) {
  return {
    _className: getClassNameWithVariants('_1lfo85i', props, variants),
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"backgroundColor\\":props.bgColor}
  }
}",
  "_root": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should use the given adapter 1`] = `
Object {
  "Button.elo.css": "._43fvyx {
  background-color: red;
  color: rgba(250,250,250,0.35);
  font-size: 15px;
  line-height: 5.2px;
  border-width: multiply(borderWidth,2)
}

._43fvyx__Type-Primary {
  color: red
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameWithVariants } from '@elodin/runtime'
import { createComponent } from 'react-fela'

const variants = {\\"Type\\":[\\"Primary\\",\\"Secondary\\"]}

function Button(props) {
  return {
    _className: getClassNameWithVariants('_43fvyx', props, variants),
    
  }
}

export default createComponent(Button)",
  "Label.elo.css": "._1lfo85i {
  line-height: lineHeight;
  font-size: 20px
}

._1lfo85i:hover {
  color: red;
  background-color: bgColor
}",
  "Label.elo.js": "import './Label.elo.css'
import { getClassNameWithVariants } from '@elodin/runtime'
import { createComponent } from 'react-fela'

const variants = {\\"Type\\":[\\"Primary\\",\\"Secondary\\"]}

function Label(props) {
  return {
    _className: getClassNameWithVariants('_1lfo85i', props, variants),
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"backgroundColor\\":props.bgColor}
  }
}

export default createComponent(Label)",
  "_root": "import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;
